optimizations/quantization/basemodel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: model-deployment
  labels:
    openshift.io/cluster-monitoring: "true"
