optimizations/quantization/basemodel/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: model-deployment-inference
  namespace: openshift-ingress
spec:
  gatewayClassName: openshift-default
  listeners:
    - allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: model-deployment
      name: http
      port: 80
      protocol: HTTP
